@@ -1,3 +1,7 @@
+2009-09-17  Tiger Soldier  <tigersoldi@gmail.com>
+
+	* src/ol_osd_window.c (ol_osd_window_unmap): Fix issue #16
+
 2009-09-14  Tiger Soldier  <tigersoldi@gmail.com>
 	* New icons, we can throw the icon of WMP away now!
 
